# CMake-Practice-Source-Code

./: README.md
t1/: CMakeLists.txt  main.c
t2/: CMakeLists.txt
t2/src/: CMakeLists.txt
t3/: CMakeLists.txt
t3/lib/: CMakeLists.txt  hello.c
t4/: CMakeLists.txt
t4/src/: CMakeLists.txt
t5/: CMakeLists.txt
t5/src/: CMakeLists.txt  main.c
t6/: CMakeLists.txt
t6/cmake/: FindHello.cmake
t6/lib/: hello.lib
t6/src/: CMakeLists.txt  main.c
